# media-downloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
designer/: about_dialog.ui  about_window.ui  about_window_old.ui  keyboard_shortcuts_dialog.ui  main_window.ui  preferences_dialog.ui  tab.ui  tab_buttons.ui
flatpak/: com.markopejic.downloader.desktop  com.markopejic.downloader.json  com.markopejic.downloader.metainfo.xml  com.markopejic.downloader.releases.xml  python-modules.json  python3-yt-dlp.json  runner
icons/: icon.xcf
inno/: setup.iss
pyinstaller/: com.markopejic.downloader.spec  windows.spec
resources/designer/: about_dialog.ui  icons.qrc  keyboard_shortcuts_dialog.ui
resources/icons/: com.markopejic.downloader.xcf
resources/linux/: com.markopejic.downloader.desktop  com.markopejic.downloader.metainfo.xml
resources/windows/: AppxManifest.xml  deps.json  resources.pri  resources.scale-125.pri  resources.scale-150.pri  resources.scale-200.pri  resources.scale-400.pri
scripts/: Build-Msix.ps1  run.py  update-flatpak-deps.sh
src/: __init__.py  __main__.py  app.py  downloader.py
src/custom_widgets/: __init__.py  combobox.py  largepushbutton.py  plaintextedit.py
src/designer/: about_dialog.ui  keyboard_shortcuts_dialog.ui  main_window.ui  preferences_dialog.ui  tab.ui  tab_buttons.ui
src/main/: __init__.py  about_dialog.py  application.py  config.py  directory_picker.py  keyboard_shortcuts_dialog.py  main_window.py  preferences_dialog.py  settings.py  tab.py  toggle.py
src/media_downloader/: __about__.py  __init__.py  __main__.py  downloader.py  resources.qrc  utils.py  yt_dlp_update_service.py  yt_dlp_updater.py
src/resources/: __init__.py
src/ui/: __init__.py  about_dialog.ui  config.py  icons.qrc  icons_rc.py  tab.ui  tab_buttons.ui  text.py  ui_about_dialog.py  ui_keyboard_shortcuts_dialog.py  ui_main_window.py  ui_preferences_dialog.py  ui_tab.py  ui_tab_buttons.py
(+63 files in other folders)
