[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "media-downloader"
dynamic = ["version"]
dependencies = [
    "yt-dlp[default,curl-cffi] == 2026.3.3",
    "PySide6-Essentials == 6.10.2",
]

[dependency-groups]
build = [
    "pyinstaller == 6.19.0; platform_system == 'Windows'",
    "pillow == 12.1.1; platform_system == 'Windows'",
]
dev = [
    {include-group = "build"},
]

[project.gui-scripts]
media-downloader = "media_downloader:main"

[tool.setuptools.dynamic]
version = { attr = "media_downloader.VERSION" }